<resources>
    <string name="app_name">StorePhone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dontacc">Chưa có tài khoản?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="haveacc">Đã có tài khoản?</string>
    <string name="welcome">Chào mừng đến với Phone Store</string>
    <string name="explore">Khám phá Điện Thoại</string>
    <string name="log">Đăng nhập</string>
    <string name="regis">Đăng ký</string>
    <string name="loichao">Chào mừng quý khách đến với Phone Store Nơi hội tụ những siêu phẩm công nghệ!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_profile">Thông tin cá nhân</string>
    <string name="menu_category">Danh mục</string>
    <string name="menu_offers">Ưu đãi</string>
    <string name="menu_new_products">Sản phẩm</string>
    <string name="menu_orders">Đơn hàng</string>
    <string name="menu_carts">Giỏ hàng</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Tìm kiếm . . .</string>
    <string name="popular">Sản phẩm bán chạy</string>
    <string name="all">Tất cả</string>
    <string name="exp_pro">Danh mục sản phẩm</string>
    <string name="recommend">Đề xuất cho bạn</string>
    <string name="des">Mô tả</string>
    <string name="dis20per">Giảm giá 20%</string>
    <string name="rating">5.0</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="name_cate">Tên Danh mục</string>
    <string name="pro_name">Tên Sản Phẩm</string>
    <string name="rate">5.0</string>
    <string name="fif">50</string>
    <string name="money">Giá tiền:</string>
    <string name="sry">Xin lỗi, hiện tại chưa có sản phẩm mới</string>
    <string name="empt">Giỏ hàng của bạn đang trống</string>
    <string name="order">Hiện tại bạn chưa mua sản phẩm nào</string>
    <string name="address">Địa chỉ</string>
    <string name="phone">Số điện thoại</string>
    <string name="update">Cập nhật</string>
    <string name="d">Giảm giá:</string>
    <string name="per">20%!</string>
    <string name="img_des_view_all">Hình ảnh điện thoại</string>
    <string name="forword_arrow">Mũi tên chuyển tiếp</string>
    <string name="price">Giá tiền: 1.000.000đ</string>
    <string name="des_pro">Mô tả sản phẩm:</string>
    <string name="description">iPhone XS Max – Sang trọng và mạnh mẽ! Với màn hình OLED Super Retina 6.5 inch siêu sắc nét, chip A12 Bionic tiên tiến, và khả năng Face ID nhanh nhạy, bạn sẽ trải nghiệm hiệu suất mượt mà và bảo mật tối ưu. Camera kép 12MP chụp ảnh chân thực, hỗ trợ quay video 4K và chế độ xóa phông chuyên nghiệp. Thiết kế đẳng cấp, khung viền thép không gỉ, chống nước IP68. iPhone XS Max mang đến trải nghiệm giải trí và công việc đỉnh cao trong mọi khoảnh khắc!</string>
    <string name="one">1</string>
    <string name="add_to_cart">Thêm vào Giỏ hàng</string>
    <string name="sum">Tổng tiền: 0 đ</string>
    <string name="buy_now">Thanh toán</string>
    <string name="product_price">Giá Sản Phẩm:</string>
    <string name="current_date">Ngày thêm:</string>
    <string name="current_time">Thời gian thêm:</string>
    <string name="summ">Tổng tiền:</string>
    <string name="sum_quan">Tổng số lượng:</string>
    <string name="product_name">Tên sản phẩm:</string>
    <string name="delete">Xóa</string>
    <string name="profile_img">Hình ảnh hồ sơ người dùng</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="special_offers">Ưu đãi đặc biệt!!!</string>
</resources>