<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/pop_img"
            android:layout_width="250dp"
            android:layout_height="255dp"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome"
            app:riv_corner_radius="14dp" />

        <TextView
            android:id="@+id/pop_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alice"
            android:text="@string/popular"
            android:textSize="19sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/pop_des"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/des"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:src="@drawable/ratingbar" />

            <TextView
                android:id="@+id/pop_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/alice"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/pop_dis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/alice"
                android:gravity="end"
                android:text="@string/dis20per"
                android:textColor="@color/bluedam"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>